# nanoGPT-follow-along

./: README.md  bigram.py  colab-code.py  example-output.md  example.output  pyproject.toml  train.py  v2.py
